# openalex-onprem

./: .gitignore  .gitlab-ci.yml  README.md  alembic.ini  pyproject.toml  requirements.txt
abstract_validation/: Analysis.ipynb  README.md  extract_ids.py  pyproject.toml  sample_from_solr.py
conf/: default-prod.env  default-temp.env  default.env
deprecated/ingest_v1/: pyproject.toml  update_solr_daily.py
deprecated/ingest_v1/processors/postgres/: flatten.py
deprecated/ingest_v1/setup/: pg_users.sql
deprecated/meta_cache/scripts/: complete_abstracts_for_query.py  get_solr_ids.py  import_nacsos.py
deprecated/meta_cache/server/: middleware.py
deprecated/meta_cache/shared/: crud.py  schema.py
docs/: ABSTRACT_CACHE.md  DATABASE.md  MERGE_SNAPSHOTS.md  OPENALEX_API.md  SOLR.md  TARGETED_BACKFILL.md
evaluation/: Analysis.ipynb  queries.sql
ingest_v1/: update_solr.py
ingest_v1/processors/postgres/: structs.py
ingest_v1/processors/solr/: transform_partition.py
ingest_v1/setup/: pg_clear.sql
ingest_v1/setup/solr_configset/: managed-schema.xml  solrconfig.xml
ingest_v1/shared/: util.py
meta_cache/: config.py  pyproject.toml  requirements.txt  setup.py
meta_cache/config/: default.env  hypercorn.toml  logging.toml
meta_cache/data/: __init__.py  crud.py  db.py  models.py  schema.py  util.py
meta_cache/handlers/: crud.py  db.py  models.py  schema.py  util.py  wrapper.py
meta_cache/handlers/wrappers/: __init__.py  base.py  dimensions.py  pubmed.py  scopus.py  wos.py
meta_cache/scripts/: cache2solr.py  climate_health.py  complete_abstracts_for_query.py  config.py  fill_solr.py  import_dimensions.py  import_nacsos.py  nacsos.py  request_ch.py
meta_cache/server/: api.py  db.py  logger.py  main.py  queue.py
meta_cache/wrappers/: __init__.py  base.py  dimensions.py  scopus.py
migrations/: env.py
old/scratch/: like.sql  stats.sql
openalex-ingest/: README.md  config.py  default.env  pyproject.toml  transform_partition_solr.py  update.sh  update_postgres.py  update_solr.py  update_solr_daily.py  util.py
openalex-ingest/daily/: api_update.py  fix_abstracts.py  main.py  oa_api.py  pull_api_update.py  util.py
openalex-ingest/processors/postgres/: deletion.py  flatten.py  flatten_partition.py  structs.py
openalex-ingest/processors/solr/: structs.py  transform_partition.py
openalex-ingest/processors/solr_daily/: structs.py  transform.py
openalex-ingest/queue/: main.py
openalex-ingest/scripts/: cache2solr.py  climate_health.py  complete_abstracts_for_query.py  get_solr_ids.py  import_dimensions.py  import_nacsos.py  request_cache_for_ids.py  retrospective_bulk_api_pull.py
openalex-ingest/scripts/migrations/: env.py
openalex-ingest/scripts/migrations/versions/: 44494e2209a7_revision.py  500ea7c3f0be_revision.py  59f75046e387_revision.py  7e92682ac511_revision.py  96c6dfeb6d9d_revision.py
openalex-ingest/server/: api.py  db.py  logger.py  main.py  middleware.py  queue.py
openalex-ingest/setup/: pg_clear.sql  pg_indices.sql  pg_indices_drop.sql  pg_schema.sql  solr_solr.in.sh  solrconfig.xml
openalex-ingest/setup/solr_configset/: managed-schema.xml
openalex-ingest/shared/: apis.py  config.py  crud.py  db.py  models.py  schema.py  solr.py  util.py
openalex-ingest/snapshot/: load.py
openalex-ingest/snapshot/scripts/: 01_sync_s3.sh  02_solr_setup.sh  03_load.sh  04_swap.sh  test.sh
openalex-ingest/snapshot/solr/solr_configset/: managed-schema.xml  solrconfig.xml
openalex-ingest/worker/: main.py
openalex-solr/: README.md
openalex-solr/pb/: invert.cpp  run.py  test.cpp
scratch/: engine.py  lang_assign.py  language.py  scratch.sql  tarun.sql
scripts/: engine.py  requirements.txt
scripts/alt_engine/: README.md  abstract_lengths.py  download_query.py  download_query_csv.py  download_query_jsonl.py  download_query_jsonl_ids.py  import.sh  import_works.py  start_solr.md  tantivy_test.py  test_solr.py  upload_jsonl.py
scripts/alt_engine/queries/: tarun.txt  tarun_oa.txt
scripts/sampling/: sample.sql
scripts/sampling/language/: 01_predict_lang.py  02_import.sql  02_update.sql  03_load_data.py  README.md
src/openalex_ingest/: __init__.py
src/openalex_ingest/daily/: fix_abstracts.py  pull_api_update.py
src/openalex_ingest/gapfilling/: __init__.py  fix_id_mismatch.py  queue_ids.py  random_sample.py
src/openalex_ingest/scripts/: climate_health.py  complete_abstracts_for_query.py  import_dimensions.py  import_nacsos.py  reset_solarized_column.sql
src/openalex_ingest/server/: api.py  db.py  logger.py  main.py  middleware.py
src/openalex_ingest/shared/: apis.py  crud.py  models.py  schema.py  solr.py  util.py
src/openalex_ingest/snapshot/: __init__.py  load.py
src/openalex_ingest/worker/: main.py
transformData/: openalex-abstract.sql
(+14 files in other folders)
