[project]
name = "metadata-cache"
version = "1.0.0"
dependencies = [
    "fastapi==0.115.6",
    "httpx[http2,socks]==0.28.1",
    "hypercorn==0.17.3",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "psycopg[binary]==3.2.4",
    "pydantic==2.10.5",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "rq-dashboard-fast==0.5.10",
    "setuptools==75.8.0",
    "sqlalchemy==2.0.37",
    "sqlalchemy-json==0.7.0",
    "sqlmodel==0.0.22",
    "toml==0.10.2",
    "tqdm==4.67.1",
    "typer==0.15.1",
]
