[project]
name = "openalex-ingest"
version = "2.0.0"
requires-python = ">=3.13"

dependencies = [
    "nacsos_data[utils,scripts]",
    "notebook>=7.5.1",
    "orjson>=3.11.5",
    "tqdm==4.67.1",
]

[tool.uv.sources]
nacsos_data = { git = "git+ssh://git@gitlab.pik-potsdam.de/mcc-apsis/nacsos/nacsos-data.git", tag = "v0.24.7" }
